--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,22 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.firstpartImg {
+  background-image: url(https://www.royalmansour.com/wp-content/uploads/2024/07/car1-La-Grande-Table-Marocaine.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
+.scndpartImg {
+  background-image: url(https://www.restomobilier.ma/wp-content/uploads/2023/05/chaises-et-tables-maroc.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
 .top-bar {
   display: flex;
   justify-content: space-between;
@@ -20,7 +36,6 @@ body {
 
 .contact-info i {
   margin-right: 5px;
-  color: black;
 }
 
 .language-selector {
@@ -88,7 +103,7 @@ body {
   position: absolute;
   top: 100%;
   left: 0;
-  background: #222;
+  background: rgba(0, 0, 0, 0.7);
   list-style: none;
   padding: 10px 0;
   min-width: 180px;
@@ -112,7 +127,7 @@ body {
 
 .dropdown-menu li a,
 .deep-menu li a {
-  color: #070606;
+  color: hsl(0, 8%, 97%);
   text-decoration: none;
   display: block;
 }
@@ -129,6 +144,61 @@ body {
 .book-button:hover {
   background: #d4af37;
   color: black;
+}
+
+/* Modale  style*/
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: white;
+  padding: 30px;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 400px;
+  position: relative;
+  text-align: center;
+  background-image: url(https://www.royalmansour.com/wp-content/uploads/2024/07/car1-La-Grande-Table-Marocaine.jpg);
+  background-size: cover;
+}
+
+.modal-content input,
+.modal-content button {
+  display: block;
+  margin: 10px auto;
+  padding: 10px;
+  width: 80%;
+  border: #030303 solid 1px;
+  border-radius: 5px;
+  background-color: transparent;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.input_text {
+  color: white;
+}
+
+input::placeholder {
+  font-weight: bold;
+  opacity: 0.5;
+  color: white;
 }
 
 /*# sourceMappingURL=app.css.map */
