corection bg hero

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,7 +4,7 @@ body {
 }
 
 .firstpartImg {
-  background-image: url(https://www.royalmansour.com/wp-content/uploads/2024/07/car1-La-Grande-Table-Marocaine.jpg);
+  background-image: url(../../../../public/images/image.png);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -19,13 +19,29 @@ body {
   height: 100vh;
 }
 
+.firstpartImg .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+
+.top-bar,
+.navbar {
+  position: relative;
+  z-index: 1;
+}
+
 .top-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 5px 10vw;
   font-size: 14px;
-  color: #ddd;
+  color: white;
 }
 
 .contact-info {
@@ -39,12 +55,12 @@ body {
 }
 
 .language-selector {
-  color: #ccc;
+  color: white;
 }
 
 .language-selector span {
   margin: 0 3px;
-  color: #888;
+  color: gold;
 }
 
 .top-bar {
@@ -52,7 +68,7 @@ body {
   justify-content: space-between;
   padding: 5px 30px;
   font-size: 12px;
-  background: #111;
+  background-color: transparent;
 }
 
 .navbar {
@@ -73,13 +89,14 @@ body {
 .logo {
   font-size: 26px;
   font-weight: bold;
-  color: #030303;
+  color: white;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
   gap: 20px;
+  color: white;
 }
 
 .nav-links li {
@@ -88,7 +105,7 @@ body {
 
 .nav-links a {
   text-decoration: none;
-  color: #060606;
+  color: white;
   font-size: 14px;
   transition: 0.3s;
 }
@@ -135,7 +152,7 @@ body {
 .book-button {
   padding: 8px 18px;
   border: 1px solid #d4af37;
-  color: rgb(8, 8, 8);
+  color: white;
   text-decoration: none;
   border-radius: 20px;
   transition: 0.3s;
