--- a/src/sass/modules/home/_nav.scss
+++ b/src/sass/modules/home/_nav.scss
@@ -944,7 +944,7 @@ body {
 }
 
 .specials-details.d-flex {
-    display: flex 
+    display: flex
 }
 
 .special-part1 {
@@ -1029,7 +1029,70 @@ body {
 
 
 
+.reservation {
+    padding: 60px 10%;
+    
+    color: #f1c27d;
+}
 
+.reservation h1 {
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    color: #f1c27d;
+}
+
+form {
+    align-items: center;
+}
+
+.row {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    margin-bottom: 20px;
+    flex-wrap: wrap;
+}
+
+input,
+textarea {
+    background-color: transparent;
+    border: 1px solid #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    width: 300px;
+    font-size: 1rem;
+}
+
+textarea {
+    width: 100%;
+}
+
+.textarea {
+    display: flex;
+    flex-direction: column;
+
+    button {
+        margin: 0 auto;
+    }
+}
+
+button[type="submit"] {
+    padding: 15px 30px;
+    margin-top: 20px;
+    background-color: transparent;
+    border: 2px solid #f1c27d;
+    color: #f1c27d;
+    border-radius: 30px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+button[type="submit"]:hover {
+    background-color: #f1c27d;
+    color: #000;
+}
 
 
 
