--- a/src/sass/modules/home/_nav.scss
+++ b/src/sass/modules/home/_nav.scss
@@ -1254,14 +1254,14 @@ button[type="submit"]:hover {
 
 
 @media (max-width:768px) {
-  .imagesgallery{
+    .imagesgallery {
 
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      align-items: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
 
-  }
+    }
 
 }
 
@@ -1365,8 +1365,57 @@ button[type="submit"]:hover {
     }
 }
 
+.maps {
+    background-color: #111111;
+    padding: 60px 0;
+    color: #fff;
+    width: 100%;
+}
+
+.maps-content {
+    max-width: 1200px;
+    padding: 0 20px;
+    text-align: left;
+}
+
+.maps-content h3 {
+    color: #999;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.maps-content h1 {
+    color: #d4af37;
+    font-size: 42px;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 30px;
+
+}
+
+.maps-content h1:after {
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #d4af37;
+    margin-top: 15px;
+}
 
 
+
+/* Design responsive */
+@media (max-width: 768px) {
+    .maps-content h1 {
+        font-size: 32px;
+    }
+
+    .map iframe {
+        height: 350px;
+    }
+}
 
 
 
